--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto+Slab:wght@500&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -14,3 +14,47 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.hero {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  font-family: "Poppins";
+  justify-content: space-evenly;
+  align-items: center;
+  background: #15181b;
+  color: white;
+}
+.hero .inactive {
+  position: absolute;
+  visibility: hidden;
+}
+.hero .hero-text {
+  transition: all 300ms ease;
+  overflow: hidden;
+}
+.hero .hero-text h1 {
+  font-size: 2.7rem;
+  margin: 0;
+}
+.hero .hero-text p {
+  margin: 0;
+  margin-top: -0.5rem;
+  font-size: 1.5rem;
+}
+.hero .hero-text ul {
+  padding: 0;
+  margin: 2rem 0 0 0;
+  list-style-type: none;
+  display: flex;
+  font-size: 2rem;
+  gap: 1rem;
+  filter: brightness(90%);
+}
+.hero svg {
+  transition: margin 300ms;
+  fill: whitesmoke;
+}
+.hero svg .top, .hero svg .bottom {
+  fill: #FF9E0C;
+}/*# sourceMappingURL=globals.css.map */
