--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,12 +13,14 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .hero {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 87vh;
   font-family: "Poppins";
   justify-content: space-evenly;
   align-items: center;
@@ -42,19 +44,56 @@ a {
   margin-top: -0.5rem;
   font-size: 1.5rem;
 }
-.hero .hero-text ul {
+.hero svg {
+  z-index: 1;
+  transition: margin 300ms;
+  fill: whitesmoke;
+  filter: drop-shadow(0 0 10px #ff9e0c);
+}
+.hero svg .top,
+.hero svg .bottom {
+  fill: #ff9e0c;
+}
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 13vh;
+}
+footer .links {
   padding: 0;
-  margin: 2rem 0 0 0;
+  margin: 10px 0 0 0;
   list-style-type: none;
   display: flex;
   font-size: 2rem;
   gap: 1rem;
   filter: brightness(90%);
 }
-.hero svg {
-  transition: margin 300ms;
-  fill: whitesmoke;
+
+.hero-menu .menu-btn {
+  position: absolute;
+  color: white;
+  font-size: 2rem;
+  right: 0;
+  margin: 1.5rem;
+  cursor: pointer;
+  z-index: 10;
 }
-.hero svg .top, .hero svg .bottom {
-  fill: #FF9E0C;
+.hero-menu .menu {
+  background: rgba(76, 62, 228, 0.5);
+  width: 15rem;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  transform: translateX(100%);
+  transition: transform 300ms ease;
+}
+.hero-menu .menu ul {
+  background: white;
+  margin-top: 5rem;
+  list-style-type: none;
+  padding: 2rem;
+}
+.hero-menu .active {
+  transform: translateX(0);
 }/*# sourceMappingURL=globals.css.map */
