--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto+Slab:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto+Slab:wght@500&display=swap");
 
 $test: rgb(76, 62, 228, 0.5);
 $dark: #15181b;
-$orange: #FF9E0C;
-$orange-light: #FFE4AE;
+$orange: #ff9e0c;
+$orange-light: #ffe4ae;
 
 html,
 body {
@@ -20,13 +20,15 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .hero {
   display: flex;
   width: 100%;
-  height: 100vh;
-  font-family: 'Poppins';
+  height: 87vh;
+  font-family: "Poppins";
   justify-content: space-evenly;
   align-items: center;
   background: $dark;
@@ -48,25 +50,69 @@ a {
       margin-top: -0.5rem;
       font-size: 1.5rem;
     }
-    ul {
-      padding: 0;
-      margin: 2rem 0 0 0;
-      // background: $test;
-      list-style-type: none;
-      display: flex;
-      font-size: 2rem;
-      gap: 1rem;
-      filter: brightness(90%);
-    }
   }
   svg {
+    z-index: 1;
     transition: margin 300ms;
     fill: whitesmoke;
-    .top, .bottom {
+    filter: drop-shadow(0 0 10px  $orange);
+    .top,
+    .bottom {
       fill: $orange;
+    }
+    .mid {
+      
     }
     // .mid {
     //   fill: $orange-light
     // }
+  }
+}
+
+footer {
+  // background: $test;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 13vh;
+  .links {
+    padding: 0;
+    margin: 10px 0 0 0;
+    // background: $test;
+    list-style-type: none;
+    display: flex;
+    font-size: 2rem;
+    gap: 1rem;
+    filter: brightness(90%);
+  }
+}
+
+.hero-menu {
+  .menu-btn {
+    position: absolute;
+    color: white;
+    font-size: 2rem;
+    right: 0;
+    margin: 1.5rem;
+    cursor: pointer;
+    z-index: 10;
+  }
+  .menu {
+    background: $test;
+    width: 15rem;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+    transform: translateX(100%);
+    transition: transform 300ms ease;
+    ul {
+      background: white;
+      margin-top: 5rem;
+      list-style-type: none;
+      padding: 2rem;
+    }
+  }
+  .active {
+    transform: translateX(0);
   }
 }
