--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto+Slab:wght@500&display=swap");
+@-webkit-keyframes glow {
+  from {
+    filter: drop-shadow(0 0 10px #ff9e0c);
+  }
+  to {
+    filter: drop-shadow(0 0 15px #ff9e0c);
+  }
+}
+@keyframes glow {
+  from {
+    filter: drop-shadow(0 0 10px #ff9e0c);
+  }
+  to {
+    filter: drop-shadow(0 0 15px #ff9e0c);
+  }
+}
 html,
 body {
   padding: 0;
@@ -17,10 +33,15 @@ a {
   padding: 0;
 }
 
+.dark {
+  background: #15181b;
+  color: whitesmoke;
+}
+
 .hero {
   display: flex;
   width: 100%;
-  height: 87vh;
+  height: 90vh;
   font-family: "Poppins";
   justify-content: space-evenly;
   align-items: center;
@@ -48,26 +69,31 @@ a {
   z-index: 1;
   transition: margin 300ms;
   fill: whitesmoke;
-  filter: drop-shadow(0 0 10px #ff9e0c);
+  -webkit-animation: glow alternate infinite 2000ms;
+          animation: glow alternate infinite 2000ms;
 }
 .hero svg .top,
 .hero svg .bottom {
   fill: #ff9e0c;
 }
-footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 13vh;
-}
-footer .links {
+
+.links {
+  height: 10vh;
   padding: 0;
-  margin: 10px 0 0 0;
+  margin: 0;
   list-style-type: none;
   display: flex;
   font-size: 2rem;
   gap: 1rem;
   filter: brightness(90%);
+  justify-content: center;
+  align-items: center;
+}
+.links a {
+  background: rgba(76, 62, 228, 0.5);
+}
+.links a:hover {
+  filter: brightness(150%);
 }
 
 .hero-menu .menu-btn {
@@ -87,6 +113,7 @@ footer .links {
   right: 0;
   transform: translateX(100%);
   transition: transform 300ms ease;
+  z-index: 7;
 }
 .hero-menu .menu ul {
   background: white;
