--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto+Slab:wght@500&display=swap");
+@import '_variables.scss';
 
-$test: rgb(76, 62, 228, 0.5);
-$dark: #15181b;
-$orange: #ff9e0c;
-$orange-light: #ffe4ae;
 
 html,
 body {
@@ -24,10 +21,15 @@ a {
   padding: 0;
 }
 
+.dark {
+  background: $dark;
+  color: whitesmoke;
+}
+
 .hero {
   display: flex;
   width: 100%;
-  height: 87vh;
+  height: 90vh;
   font-family: "Poppins";
   justify-content: space-evenly;
   align-items: center;
@@ -55,13 +57,10 @@ a {
     z-index: 1;
     transition: margin 300ms;
     fill: whitesmoke;
-    filter: drop-shadow(0 0 10px  $orange);
+    animation: glow alternate infinite 2000ms;
     .top,
     .bottom {
       fill: $orange;
-    }
-    .mid {
-      
     }
     // .mid {
     //   fill: $orange-light
@@ -69,21 +68,22 @@ a {
   }
 }
 
-footer {
-  // background: $test;
+.links {
+  height: 10vh;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
   display: flex;
-  flex-direction: column;
+  font-size: 2rem;
+  gap: 1rem;
+  filter: brightness(90%);
+  justify-content: center;
   align-items: center;
-  height: 13vh;
-  .links {
-    padding: 0;
-    margin: 10px 0 0 0;
-    // background: $test;
-    list-style-type: none;
-    display: flex;
-    font-size: 2rem;
-    gap: 1rem;
-    filter: brightness(90%);
+  a {
+    background: $test;
+  }
+  a:hover {
+    filter: brightness(150%);
   }
 }
 
@@ -105,6 +105,7 @@ footer {
     right: 0;
     transform: translateX(100%);
     transition: transform 300ms ease;
+    z-index: 7;
     ul {
       background: white;
       margin-top: 5rem;
@@ -116,3 +117,4 @@ footer {
     transform: translateX(0);
   }
 }
+
