--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,8 +7,10 @@ $orange-light: #ffe4ae;
 @keyframes glow {
   from {
     filter: drop-shadow(0 0 10px  $orange);
+    transform: translateY(0);
   }
   to {
     filter: drop-shadow(0 0 15px  $orange);
+    transform: translateY(.5rem);
   }
 }
