--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,24 +2,28 @@
 @-webkit-keyframes glow {
   from {
     filter: drop-shadow(0 0 10px #ff9e0c);
+    transform: translateY(0);
   }
   to {
     filter: drop-shadow(0 0 15px #ff9e0c);
+    transform: translateY(0.5rem);
   }
 }
 @keyframes glow {
   from {
     filter: drop-shadow(0 0 10px #ff9e0c);
+    transform: translateY(0);
   }
   to {
     filter: drop-shadow(0 0 15px #ff9e0c);
+    transform: translateY(0.5rem);
   }
 }
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -89,11 +93,8 @@ a {
   justify-content: center;
   align-items: center;
 }
-.links a {
-  background: rgba(76, 62, 228, 0.5);
-}
 .links a:hover {
-  filter: brightness(150%);
+  color: #ffe4ae;
 }
 
 .hero-menu .menu-btn {
@@ -105,8 +106,9 @@ a {
   cursor: pointer;
   z-index: 10;
 }
-.hero-menu .menu {
-  background: rgba(76, 62, 228, 0.5);
+
+.menu {
+  background: #ff9e0c;
   width: 15rem;
   height: 100vh;
   position: fixed;
@@ -115,12 +117,111 @@ a {
   transition: transform 300ms ease;
   z-index: 7;
 }
-.hero-menu .menu ul {
-  background: white;
+.menu ul {
+  background: rgba(76, 62, 228, 0.5);
   margin-top: 5rem;
   list-style-type: none;
   padding: 2rem;
 }
-.hero-menu .active {
+
+.active {
   transform: translateX(0);
+}
+
+.navbar {
+  width: 100%;
+  background: #ff9e0c;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+}
+.navbar .navbar-btn {
+  font-size: 2rem;
+  color: whitesmoke;
+  cursor: pointer;
+}
+
+main {
+  font-family: "Poppins", sans-serif;
+  color: whitesmoke;
+  background: #15181b;
+  margin-top: 4rem;
+  padding: 3rem 12.5% 5rem 12.5%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+main .section-title {
+  font-family: "Roboto Slab";
+  margin-bottom: 1rem;
+}
+main .about {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+main .about .about-image {
+  width: 200px;
+  height: 200px;
+  background: whitesmoke;
+  border-radius: 50%;
+}
+main .about .about-text {
+  font-size: 20px;
+  max-width: 400px;
+}
+main .icons {
+  margin-top: 5rem;
+}
+main .icons i {
+  font-size: 2rem;
+}
+
+.footer {
+  color: #15181b;
+  background: #ff9e0c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.projects-grid {
+  background: rgba(76, 62, 228, 0.5);
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+.projects-grid .project-card {
+  width: 100%;
+  background: white;
+  color: #15181b;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.projects-grid .project-card .card-img {
+  width: 100%;
+  height: 150px;
+  background: #ffe4ae;
+}
+.projects-grid .project-card .card-text {
+  padding: 1rem;
+  max-width: 250px;
+}
+.projects-grid .project-card .card-text p {
+  font-size: 14px;
+  height: 70px;
+  overflow-y: scroll;
+}
+.projects-grid .card-btn-container {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: end;
+  gap: 0.5rem;
+}
+.projects-grid .card-btn-container .btn {
+  padding: 5px 10px;
+  background: rgba(76, 62, 228, 0.5);
+  border-radius: 5px;
 }/*# sourceMappingURL=globals.css.map */
