--- a/styles/globals.css
+++ b/styles/globals.css
@@ -107,40 +107,42 @@ a {
   z-index: 10;
 }
 
+.navbar {
+  width: 100%;
+  height: 5rem;
+  background: #000;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  box-shadow: 0 4px 10px #ff9e0c;
+}
+.navbar .navbar-btn {
+  font-size: 2rem;
+  color: whitesmoke;
+  cursor: pointer;
+}
+
 .menu {
   background: #ff9e0c;
   width: 15rem;
   height: 100vh;
   position: fixed;
+  top: 5rem;
   right: 0;
   transform: translateX(100%);
   transition: transform 300ms ease;
   z-index: 7;
+  padding: 1.5rem;
 }
 .menu ul {
-  background: rgba(76, 62, 228, 0.5);
-  margin-top: 5rem;
   list-style-type: none;
   padding: 2rem;
 }
 
 .active {
   transform: translateX(0);
-}
-
-.navbar {
-  width: 100%;
-  background: #ff9e0c;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  position: fixed;
-  top: 0;
-}
-.navbar .navbar-btn {
-  font-size: 2rem;
-  color: whitesmoke;
-  cursor: pointer;
 }
 
 main {
@@ -156,6 +158,7 @@ main {
 main .section-title {
   font-family: "Roboto Slab";
   margin-bottom: 1rem;
+  border-bottom: #ff9e0c 1px solid;
 }
 main .about {
   display: flex;
@@ -180,8 +183,8 @@ main .icons i {
 }
 
 .footer {
-  color: #15181b;
-  background: #ff9e0c;
+  color: white;
+  background: #000;
   display: flex;
   flex-direction: column;
   align-items: center;
