--- a/styles/globals.css
+++ b/styles/globals.css
@@ -194,23 +194,25 @@ main .icons i {
   background: rgba(76, 62, 228, 0.5);
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
 }
 .projects-grid .project-card {
-  width: 100%;
-  background: white;
+  background: rgba(76, 62, 228, 0.5);
   color: #15181b;
   border-radius: 10px;
   overflow: hidden;
+  display: flex;
 }
 .projects-grid .project-card .card-img {
-  width: 100%;
-  height: 150px;
+  width: 300px;
+  height: 100%;
   background: #ffe4ae;
 }
 .projects-grid .project-card .card-text {
+  background: white;
   padding: 1rem;
   max-width: 250px;
+  width: 100%;
 }
 .projects-grid .project-card .card-text p {
   font-size: 14px;
@@ -220,11 +222,12 @@ main .icons i {
 .projects-grid .card-btn-container {
   margin-top: 1rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 0.5rem;
 }
 .projects-grid .card-btn-container .btn {
   padding: 5px 10px;
   background: rgba(76, 62, 228, 0.5);
   border-radius: 5px;
+  cursor: pointer;
 }/*# sourceMappingURL=globals.css.map */
