--- a/styles/globals.css
+++ b/styles/globals.css
@@ -206,7 +206,8 @@ main .icons i {
 .projects-grid .project-card .card-img {
   width: 300px;
   height: 100%;
-  background: #ffe4ae;
+  background: #ff9e0c;
+  overflow: hidden;
 }
 .projects-grid .project-card .card-text {
   background: white;
