--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,27 +57,56 @@ a {
   visibility: hidden;
 }
 .hero .hero-text {
-  transition: all 300ms ease;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 2rem;
+  padding-right: 0;
   overflow: hidden;
+  font-size: clamp(1.3rem, 1vw + 0.5rem, 2.7rem);
 }
 .hero .hero-text h1 {
-  font-size: 2.7rem;
   margin: 0;
+  line-height: 150%;
 }
 .hero .hero-text p {
   margin: 0;
   margin-top: -0.5rem;
-  font-size: 1.5rem;
 }
-.hero svg {
+.hero .hero-text .btn-container {
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+.hero .hero-text .btn-container .btn {
+  padding: 5px 10px;
+  cursor: pointer;
+  box-shadow: 0 0 20px 4px #ff9e0c;
+  background: linear-gradient(60deg, #ffe4ae, #ff9e0c, #ffe4ae);
+  color: #15181b;
+  transition: box-shadow 200ms ease;
+}
+.hero .hero-text .btn-container .btn:hover {
+  box-shadow: 0 0 20px 7px #ff9e0c;
+}
+.hero .hero-image {
+  padding: 2rem;
+  width: 50%;
+  max-width: 500px;
+}
+.hero .hero-image svg {
   z-index: 1;
   transition: margin 300ms;
   fill: whitesmoke;
+  max-width: 500px;
+  width: 100%;
+  height: 100%;
   -webkit-animation: glow alternate infinite 2000ms;
           animation: glow alternate infinite 2000ms;
 }
-.hero svg .top,
-.hero svg .bottom {
+.hero .hero-image svg .top,
+.hero .hero-image svg .bottom {
   fill: #ff9e0c;
 }
 
@@ -245,4 +274,45 @@ main .icons i {
 }
 .projects-grid .card-btn-container .repo {
   background: #15181b;
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+    font-size: 13px;
+  }
+  .hero {
+    flex-direction: column-reverse;
+  }
+  .hero .hero-image {
+    max-height: 300px;
+    min-height: 300px;
+  }
+  .hero .hero-image svg {
+    width: 100%;
+  }
+  .hero .hero-text {
+    text-align: center;
+    padding: 0;
+  }
+  .hero .hero-text .btn-container {
+    justify-content: center;
+    overflow: visible;
+    padding: 30px 0;
+  }
+  .hero .hero-text .btn-container .btn {
+    width: 150px;
+  }
+}
+@media screen and (max-width: 425px) {
+  :root {
+    font-size: 11px;
+  }
+  .hero .hero-image {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 375px) {
+  .hero .hero-text .btn-container .btn {
+    width: 100px;
+  }
 }/*# sourceMappingURL=globals.css.map */
