--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,30 +40,61 @@ a {
   }
   .hero-text {
     // background: $test;
-    transition: all 300ms ease;
+    width: max-content;
+    padding: 2rem;
+    padding-right: 0;
     overflow: hidden;
+    font-size: clamp(1.3rem, 1vw + 0.5rem, 2.7rem);
     h1 {
-      font-size: 2.7rem;
       margin: 0;
+      line-height: 150%;
     }
     p {
       margin: 0;
       margin-top: -0.5rem;
-      font-size: 1.5rem;
+    }
+    .btn-container {
+      margin-top: 1.5rem;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      .btn {
+        padding: 5px 10px;
+        cursor: pointer;
+        // box-shadow: 0 0 3px 4px $orange;
+        box-shadow: 0 0 20px 4px $orange;
+        background: linear-gradient(
+          60deg,
+          $orange-light,
+          $orange,
+          $orange-light
+        );
+        color: $dark;
+        transition: box-shadow 200ms ease;
+        &:hover {
+          box-shadow: 0 0 20px 7px $orange;
+        }
+      }
     }
   }
-  svg {
-    z-index: 1;
-    transition: margin 300ms;
-    fill: whitesmoke;
-    animation: glow alternate infinite 2000ms;
-    .top,
-    .bottom {
-      fill: $orange;
+  .hero-image {
+    padding: 2rem;
+    width: 50%;
+    max-width: 500px;
+    svg {
+      z-index: 1;
+      transition: margin 300ms;
+      fill: whitesmoke;
+      max-width: 500px;
+      width: 100%;
+      height: 100%;
+      // aspect-ratio: 1;
+      animation: glow alternate infinite 2000ms;
+      .top,
+      .bottom {
+        fill: $orange;
+      }
     }
-    // .mid {
-    //   fill: $orange-light
-    // }
   }
 }
 
@@ -232,6 +263,57 @@ main {
     }
     .repo {
       background: $dark;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+    font-size: 13px;
+  }
+  .hero {
+    flex-direction: column-reverse;
+    .hero-image {
+      max-height: 300px;
+      min-height: 300px;
+      svg {
+        width: 100%;
+      }
+    }
+    .hero-text {
+      text-align: center;
+      padding: 0;
+      .btn-container {
+        justify-content: center;
+        overflow: visible;
+        padding: 30px 0;
+        .btn {
+          width: 150px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  :root {
+    font-size: 11px;
+  }
+  .hero{
+    .hero-image{
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .hero {
+    .hero-text {
+      .btn-container {
+        .btn {
+          width: 100px;
+        }
+      }
     }
   }
 }
