--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -62,17 +62,19 @@ a {
         padding: 5px 10px;
         cursor: pointer;
         // box-shadow: 0 0 3px 4px $orange;
-        box-shadow: 0 0 20px 4px $orange;
-        background: linear-gradient(
-          60deg,
-          $orange-light,
-          $orange,
-          $orange-light
-        );
-        color: $dark;
-        transition: box-shadow 200ms ease;
+        box-shadow: 0 0 0 5px $orange, 0 0 10px 6px $orange;
+        // background: linear-gradient(
+        //   60deg,
+        //   $orange-light,
+        //   $orange,
+        //   $orange-light
+        // );
+        color: white;
+        transition: all 200ms ease;
         &:hover {
-          box-shadow: 0 0 20px 7px $orange;
+          box-shadow: 0 0 0 5px $orange, 0 0 10px 8px $orange;
+          background: $orange;
+          color: $dark;
         }
       }
     }
@@ -136,7 +138,7 @@ a {
   position: fixed;
   top: 0;
   // border-bottom: $orange 2px solid;
-  box-shadow: 0 4px 10px $orange;
+  box-shadow: 0 4px 10px $orange, 0 1px 10px $orange-light;
   .navbar-btn {
     font-size: 2rem;
     color: whitesmoke;
@@ -145,6 +147,7 @@ a {
 }
 
 .menu {
+  font-size: 1.2rem;
   background: $orange;
   width: 15rem;
   height: 100vh;
@@ -175,8 +178,9 @@ main {
   flex-direction: column;
   .section-title {
     font-family: "Roboto Slab";
-    margin-bottom: 1rem;
+    margin-bottom: 20px;
     border-bottom: $orange 1px solid;
+    font-size: 2rem;
   }
   .about {
     display: flex;
@@ -184,12 +188,15 @@ main {
     gap: 1.5rem;
     .about-image {
       width: 200px;
-      height: 200px;
+      aspect-ratio: 1;
       background: whitesmoke;
       border-radius: 50%;
+      background-image: url(/Zaki2022.jpg);
+      background-position: center;
+      background-size: cover;
     }
     .about-text {
-      font-size: 20px;
+      font-size: 1.1rem;
       max-width: 400px;
     }
   }
@@ -267,6 +274,22 @@ main {
   }
 }
 
+@media screen and (max-width: 830px) {
+  main {
+    .about {
+      flex-direction: column;
+      .about-text {
+        font-size: 1.2rem;
+        text-align: center;
+        max-width: 300px;
+      }
+      .about-image {
+        width: 175px;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 768px) {
   :root {
     font-size: 13px;
@@ -299,8 +322,8 @@ main {
   :root {
     font-size: 11px;
   }
-  .hero{
-    .hero-image{
+  .hero {
+    .hero-image {
       width: 100%;
     }
   }
