--- a/styles/globals.css
+++ b/styles/globals.css
@@ -146,6 +146,7 @@ a {
   justify-content: space-between;
   position: fixed;
   top: 0;
+  z-index: 10;
   box-shadow: 0 4px 10px #ff9e0c, 0 1px 10px #ffe4ae;
 }
 .navbar .navbar-btn {
@@ -212,6 +213,7 @@ main .about .about-text {
 }
 main .icons {
   margin-top: 5rem;
+  margin-bottom: 100px;
 }
 main .icons i {
   font-size: 2rem;
@@ -245,19 +247,23 @@ main .icons i {
 .projects-grid .project-card .card-img {
   width: 300px;
   height: 100%;
-  background: #ff9e0c;
+  background: #ffe4ae;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
-.projects-grid .project-card .card-img > * {
-  transform: scale(160%);
+.projects-grid .project-card .card-img .img-box {
+  display: block;
+  width: 100%;
+  transform: scale(110%);
 }
 .projects-grid .project-card .card-text {
   background: white;
   padding: 1rem;
-  max-width: 250px;
-  width: 100%;
+  width: 50%;
 }
 .projects-grid .project-card .card-text p {
+  max-width: 250px;
   font-size: 14px;
   height: 70px;
   overflow-y: scroll;
@@ -316,10 +322,34 @@ main .icons i {
   .hero .hero-text .btn-container {
     justify-content: center;
     overflow: visible;
-    padding: 30px 0;
+    padding: 30px 20px;
   }
   .hero .hero-text .btn-container .btn {
     width: 150px;
+  }
+  .projects-grid .project-card {
+    flex-direction: column;
+  }
+  .projects-grid .project-card .card-text {
+    width: 100%;
+    display: grid;
+  }
+  .projects-grid .project-card .card-text p {
+    font-size: 1.2rem;
+    width: 100%;
+    max-width: 350px;
+    overflow-y: visible;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .projects-grid .project-card .card-text .card-btn-container .btn {
+    font-size: 1.2rem;
+    width: 50%;
+    text-align: center;
+  }
+  .projects-grid .project-card .card-img {
+    width: 400px;
   }
 }
 @media screen and (max-width: 425px) {
@@ -329,8 +359,6 @@ main .icons i {
   .hero .hero-image {
     width: 100%;
   }
-}
-@media screen and (max-width: 375px) {
   .hero .hero-text .btn-container .btn {
     width: 100px;
   }
