--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -137,6 +137,7 @@ a {
   justify-content: space-between;
   position: fixed;
   top: 0;
+  z-index: 10;
   // border-bottom: $orange 2px solid;
   box-shadow: 0 4px 10px $orange, 0 1px 10px $orange-light;
   .navbar-btn {
@@ -203,6 +204,7 @@ main {
   .icons {
     // background: $test;
     margin-top: 5rem;
+    margin-bottom: 100px;
     i {
       font-size: 2rem;
     }
@@ -235,18 +237,22 @@ main {
     .card-img {
       width: 300px;
       height: 100%;
-      background: $orange;
+      background: $orange-light;
       overflow: hidden;
-      & > * {
-        transform: scale(160%);
+      display: flex;
+      align-items: center;
+      .img-box {
+        display: block;
+        width: 100%;
+        transform: scale(110%);
       }
     }
     .card-text {
       background: white;
       padding: 1rem;
-      max-width: 250px;
-      width: 100%;
+      width: 50%;
       p {
+        max-width: 250px;
         font-size: 14px;
         height: 70px;
         overflow-y: scroll;
@@ -309,10 +315,36 @@ main {
       .btn-container {
         justify-content: center;
         overflow: visible;
-        padding: 30px 0;
+        padding: 30px 20px;
         .btn {
           width: 150px;
         }
+      }
+    }
+  }
+  .projects-grid {
+    .project-card {
+      flex-direction: column;
+      .card-text {
+        width: 100%;
+        display: grid;
+        p {
+          font-size: 1.2rem;
+          width: 100%;
+          max-width: 350px;
+          overflow-y: visible;
+          height: fit-content;
+        }
+        .card-btn-container {
+          .btn {
+            font-size: 1.2rem;
+            width: 50%;
+            text-align: center;
+          }
+        }
+      }
+      .card-img {
+        width: 400px;
       }
     }
   }
@@ -326,11 +358,6 @@ main {
     .hero-image {
       width: 100%;
     }
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .hero {
     .hero-text {
       .btn-container {
         .btn {
