--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -108,11 +108,11 @@ a {
   display: flex;
   font-size: 2rem;
   gap: 1rem;
-  filter: brightness(90%);
   justify-content: center;
   align-items: center;
+  color: rgba(255, 255, 255, 0.7);
   a:hover {
-    color: $orange-light;
+    color: white;
   }
 }
 
