--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,8 @@
 $test: rgb(76, 62, 228, 0.5);
 $dark: #15181b;
-$orange: #ff9e0c;
+$orange: #ec9005;
 $orange-light: #ffe4ae;
+$orange-dark: #ec6105;
 
 
 @keyframes glow {
