--- a/styles/globals.css
+++ b/styles/globals.css
@@ -113,7 +113,6 @@ a {
 
 .links {
   height: 10vh;
-  margin-top: 20px;
   list-style-type: none;
   display: flex;
   font-size: 2rem;
@@ -251,6 +250,7 @@ main .icons i {
   flex-direction: column;
   align-items: center;
   padding-bottom: 5px;
+  padding-top: 20px;
 }
 
 .projects-grid {
