--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -101,7 +101,6 @@ a {
 
 .links {
   height: 10vh;
-  margin-top: 20px;
   list-style-type: none;
   display: flex;
   font-size: 2rem;
@@ -243,6 +242,7 @@ main {
   flex-direction: column;
   align-items: center;
   padding-bottom: 5px;
+  padding-top: 20px;
 }
 
 .projects-grid {
