--- a/styles/globals.css
+++ b/styles/globals.css
@@ -273,15 +273,15 @@ main .icons i {
   border-radius: 10px;
   overflow: hidden;
   display: flex;
+  flex-direction: column;
 }
 .projects-grid .project-card ::-webkit-scrollbar {
   width: 4px;
   background: #77797b;
 }
 .projects-grid .project-card .card-img {
-  width: 300px;
-  height: 100%;
-  background: #ffe4ae;
+  width: 100%;
+  background: white;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -294,10 +294,14 @@ main .icons i {
 .projects-grid .project-card .card-text {
   background: white;
   padding: 1rem;
-  width: 50%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .projects-grid .project-card .card-text p {
-  max-width: 250px;
+  max-width: 350px;
+  width: 100%;
   font-size: 14px;
   height: 70px;
   overflow-y: scroll;
