--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -268,10 +268,11 @@ main {
     border-radius: 10px;
     overflow: hidden;
     display: flex;
+    flex-direction: column;
     .card-img {
-      width: 300px;
-      height: 100%;
-      background: $orange-light;
+      width: 100%;
+      // height: 100%;
+      background: white;
       overflow: hidden;
       display: flex;
       align-items: center;
@@ -284,9 +285,13 @@ main {
     .card-text {
       background: white;
       padding: 1rem;
-      width: 50%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       p {
-        max-width: 250px;
+        max-width: 350px;
+        width: 100%;
         font-size: 14px;
         height: 70px;
         overflow-y: scroll;
