--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -292,9 +292,8 @@ main {
       p {
         max-width: 350px;
         width: 100%;
-        font-size: 14px;
-        height: 70px;
-        overflow-y: scroll;
+        font-size: 16px;
+        height: max-content;
       }
     }
   }
