--- a/styles/globals.css
+++ b/styles/globals.css
@@ -236,7 +236,12 @@ main .about .about-text {
   max-width: 400px;
 }
 main .icons {
-  margin-top: 70px;
+  margin-top: 70px !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 main .icons i {
   font-size: 2rem;
@@ -329,6 +334,23 @@ main .icons i {
 .projects-text {
   max-width: 400px;
   text-align: center;
+  font-size: 1.1rem;
+}
+
+.experience {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 70px;
+}
+.experience .experience-item {
+  outline: white 1px solid;
+  border-radius: 10px;
+  padding: 10px;
+}
+.experience .experience-item .experience-desc {
+  max-width: 400px;
   font-size: 1.1rem;
 }
 
