--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -227,7 +227,12 @@ main {
     }
   }
   .icons {
-    margin-top: 70px;
+    margin-top: 70px !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
     i {
       font-size: 2rem;
       margin: 5px;
@@ -321,6 +326,23 @@ main {
   max-width: 400px;
   text-align: center;
   font-size: 1.1rem;
+}
+
+.experience {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 70px;
+  .experience-item {
+    outline: white 1px solid;
+    border-radius: 10px;
+    padding: 10px;
+    .experience-desc {
+      max-width: 400px;
+      font-size: 1.1rem;
+    }
+  }
 }
 
 @media screen and (max-width: 830px) {
